app/indexer/base/indexer.yaml
apiVersion: v1
kind: Service
metadata:
  name: indexer
  labels:
    app: indexer
  namespace: kaspa
spec:
  # Headless service for stable network IDs in the StatefulSet
  clusterIP: None
  selector:
    app: indexer
  ports:
    - name: rpc
      port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: indexer
  namespace: kaspa
spec:
  serviceName: indexer
  replicas: 1
  selector:
    matchLabels:
      app: indexer
  template:
    metadata:
      labels:
        app: indexer
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: indexer
          image: kkluster/kasia-indexer@sha256:1fbc2a670a643a155b9c2e6243afa409bceea79e8d577e51bb5d5d1f4fbf2468
          imagePullPolicy: IfNotPresent
          ports:
            - name: api
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /app/data
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
          startupProbe:
            tcpSocket:
              port: 8080
            # 5mn for startup
            failureThreshold: 30
            periodSeconds: 10
          resources:
            requests:
              memory: "512Mi"
              cpu: "1"
            limits:
              memory: "2Gi"
              cpu: "2"
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: longhorn
        resources:
          requests:
            storage: 100Gi
